# JamCatBot

./: Cargo.toml
src/: error.rs  http_utils.rs  main.rs  poise_extension.rs  prelude.rs  types.rs  voice.rs
src/api/: client.rs  error.rs  mod.rs
src/api/cats/: mod.rs  types.rs
src/api/coomer/: mod.rs  types.rs
src/api/dogs/: mod.rs  types.rs
src/api/redgifs/: mod.rs  types.rs
src/api/waifu/: mod.rs  types.rs
src/commands/: animals.rs  fun.rs  general.rs  mod.rs  music.rs  naughty.rs
src/commands/music/: clear_queue.rs  mod.rs  play.rs  queue.rs  reorder.rs  skip.rs  stop.rs  volume.rs
src/downloaders/ytdl/: mod.rs  types.rs
src/handlers/: serenity.rs  songbird.rs
src/messages/: common.rs  factory.rs  message.rs  mod.rs
src/music/: error.rs  mod.rs  types.rs
src/sources/spotify/: mod.rs  tests.rs
src/sources/ytdl/: mod.rs  tests.rs  types.rs
src/types/: guild.rs  mod.rs
src/utils/: ascii.rs  mod.rs
