[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.89"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest_old = { version = "=0.11", default-features = false, package = "reqwest", features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
    "cookies",
] }
reqwest = { version = "0.12.5", features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
    "cookies",
    "charset",
    "http2",
    "macos-system-configuration",
] }
songbird = { version = "0.4.3", features = [
    "driver",
    "gateway",
    "serenity",
    "rustls",
    "receive",
    "builtin-queue",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serenity = { version = "0.12.2", features = ["voice", "reqwest"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
symphonia = { version = "0.5.4", features = [
    "all-formats",
    "all-codecs",
    "opt-simd",
] }
once_cell = "1.19.0"
